--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -65,7 +65,8 @@ header,
   width: 9rem;
 }
 .dice {
-  outline: solid black;
+  /* outline: solid black; */
+  background: white;
   height: 1.9rem;
   width: 1.9rem;
 }
