--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -86,7 +86,7 @@ header,
   height: 50vh;
   border: 4px solid brown;
   box-shadow: 0 0 0 12px black;
-  margin: auto 0 auto 0;
+  margin: auto 1em auto 1em;
 }
 .tokens-box {
   width: 10rem;
