--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -102,3 +102,67 @@ header,
   background-color: brown;
   margin: auto;
 }
+/****** rules Modal ***/
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  font-size: 0.5em;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background: rgb(201, 190, 171);
+  margin: 3em auto; /* 15% from the top and centered */
+  padding: 2em;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-weight: bold;
+  font-size: 2em;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+#rules {
+  display: none;
+}
+table {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.cell-combi {
+  height: 2em;
+  width: 50em;
+  padding: auto;
+}
+.cell-rest {
+  height: 4em;
+  width: 50em;
+}
+.cell-value {
+  height: 2em;
+  width: 10em;
+  padding-left: 1em;
+}
