--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -101,8 +101,8 @@ header,
   flex-wrap: wrap;
 }
 .tokens-box {
-  width: 10rem;
-  height: 10rem;
+  width: 17vh;
+  height: 17vh;
   border-radius: 10px;
   border: 2px solid brown;
   box-shadow: 0 0 0 4px black;
