--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -2,13 +2,26 @@ header {
   display: flex;
   text-align: center;
   justify-content: center;
-  height: 2rem;
+  height: 10%;
 }
 .container {
   display: flex;
   justify-content: space-around;
   border: 2px solid brown;
   box-shadow: 0 0 0 4px black;
+}
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+}
+#settings-box {
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
 }
 #text-box {
   width: 10rem;
@@ -49,29 +62,11 @@ input[type="text"] {
   margin-bottom: auto auto 0 auto;
 }
 
-/********************** Only landscape for this game ***************/
-@media only screen and (orientation: portrait) {
-  #wrapper {
-    display: none;
-  }
-  #avertissement {
-    display: block;
-    margin: 1em;
-  }
-}
-@media only screen and (orientation: landscape) {
-  #avertissement {
-    display: none;
-  }
-}
-
 /************ Mobile *********/
+
 @media (max-height: 450px) {
   body {
     font: 400 100%/1 "Fredoka One", cursive;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
   button {
     height: 1.5rem;
@@ -90,6 +85,10 @@ input[type="text"] {
   }
   h2 {
     font-size: 0.9rem;
+  }
+  #text-box {
+    width: 5rem;
+    margin: auto;
   }
   label {
     font-size: 0.7rem;
@@ -116,3 +115,11 @@ input[type="text"] {
     margin: auto;
   }
 }
+/* @media (min-height: 450px) {
+    .mobile {
+      display: none;
+    }
+    .desktop {
+      display: block;
+    }
+  } */
