--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -115,11 +115,11 @@ input[type="text"] {
     margin: auto;
   }
 }
-/* @media (min-height: 450px) {
-    .mobile {
-      display: none;
-    }
-    .desktop {
-      display: block;
-    }
-  } */
+@media (min-height: 450px) {
+  .mobile {
+    display: none;
+  }
+  .desktop {
+    display: block;
+  }
+}
