--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -20,6 +20,7 @@ header,
 #header-title {
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 /*main*/
@@ -46,6 +47,7 @@ header,
   width: 15rem;
   height: 23rem;
   text-align: center;
+  align-items: center;
 }
 .player-board > img {
   height: 7rem;
@@ -84,8 +86,8 @@ header,
   text-align: center;
   background-color: var(--boardgame-color);
   border-radius: 50%;
-  width: 50vh;
-  height: 50vh;
+  width: 20rem;
+  height: 20rem;
   border: 4px solid brown;
   box-shadow: 0 0 0 12px black;
   margin: auto 1em auto 1em;
@@ -178,3 +180,113 @@ table {
   padding-left: 1em;
 }
 /********* END RULES MODAL**********/
+
+/************ Mobile *********/
+
+@media (max-height: 450px) {
+  body {
+    font: 400 150%/1 "Fredoka One", cursive;
+    margin: 6px;
+  }
+  main {
+    width: 100%;
+  }
+  button {
+    height: 1rem;
+    font-size: 0.5em;
+    margin: 0 1em 0.5em 1em;
+  }
+  .mobile {
+    display: block;
+  }
+  .desktop {
+    display: none;
+  }
+  header {
+    height: 1.5rem;
+    width: 90%;
+    align-items: center;
+  }
+  header > button {
+    margin-top: 0.25rem;
+  }
+  h1 {
+    font-size: 1.1rem;
+    margin-left: 1rem;
+  }
+  h2 {
+    font-size: 0.9rem;
+  }
+  .main-container {
+    justify-content: space-around;
+    width: 90%;
+    background-color: var(--boardgame-color);
+    border-radius: 10px;
+    border: 2px solid brown;
+    box-shadow: 0 0 0 4px black;
+    margin: auto;
+  }
+  .player-board {
+    justify-content: space-between;
+    width: 5rem;
+    height: 10rem;
+  }
+  .player-board > h2 {
+    height: 1rem;
+    width: 3rem;
+    border: 1px solid brown;
+    box-shadow: 0 0 0 3px black;
+    margin: 0.1rem 0.1rem 0.1rem 0.1rem;
+  }
+  .player-board > img {
+    height: 3rem;
+    width: 2.4rem;
+    border: 1px solid brown;
+    box-shadow: 0 0 0 2px black;
+  }
+  #gameboard {
+    width: 7rem;
+    height: 7rem;
+    border: none;
+    box-shadow: none;
+  }
+  #pot {
+    width: 7rem;
+    height: 5rem;
+  }
+  .tokens-box {
+    width: 5rem;
+    height: 4rem;
+  }
+  .token {
+    max-width: 0.75rem;
+    max-height: 0.75rem;
+  }
+  #text-box {
+    width: 5rem;
+    margin: auto;
+  }
+  label {
+    font-size: 0.7rem;
+  }
+  input[type="text"] {
+    width: 5rem;
+    height: 0.5rem;
+  }
+  #player-box {
+    width: 7rem;
+    height: 7rem;
+    text-align: center;
+    border: 1px solid black;
+    height: 10rem;
+    margin: 0.5rem 0 0.5rem 0;
+  }
+}
+@media (min-height: 450px) {
+  .mobile {
+    display: none;
+  }
+  .desktop {
+    display: block;
+  }
+}
