--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -12,6 +12,9 @@
   #avertissement {
     display: none;
   }
+  * {
+    box-sizing: border-box;
+  }
   body {
     font: 400 150%/1 "Fredoka One", cursive;
     margin: 1em auto auto auto;
@@ -55,5 +58,114 @@
     border-radius: 10px;
     align-items: center;
     text-align: center;
+  }
+  /***********Anim dice********/
+  .scene-d1,
+  .scene-d2,
+  .scene-d3 {
+    width: 34px;
+    height: 34px;
+    perspective: 200px;
+  }
+
+  .cube {
+    width: 34px;
+    height: 34px;
+    position: relative;
+    transform-style: preserve-3d;
+    transform: translateZ(-16px);
+  }
+
+  .cube.is-spinning {
+    animation: spinCube 3s infinite;
+  }
+
+  @keyframes spinCube {
+    0% {
+      transform: translateZ(-16px) rotateX(360deg) rotateY(360deg);
+    }
+    /* 25% {
+      transform: translateZ(-16px) rotateX(360deg) rotateY(360deg);
+    } */
+    /* 50% {
+      transform: translateZ(-16px) rotateX(300deg) rotateY(300deg);
+    } */
+    100% {
+      transform: translateZ(-16px) rotateX(-360deg) rotateY(-360deg);
+    }
+    /* 100% {
+      transform: translateZ(-16px) rotateX(0deg) rotateY(0deg);
+    } */
+  }
+
+  .cube__face {
+    position: absolute;
+    width: 34px;
+    height: 34px;
+    /* border: 2px solid black; */
+  }
+
+  .cube__face--front {
+    background-image: url("../images/face/face1.png");
+    background-size: cover;
+  }
+  .cube__face--right {
+    background-image: url("../images/face/face2.png");
+    background-size: cover;
+  }
+  .cube__face--back {
+    background-image: url("../images/face/face3.png");
+    background-size: cover;
+  }
+  .cube__face--left {
+    background-image: url("../images/face/face4.png");
+    background-size: cover;
+  }
+  .cube__face--top {
+    background-image: url("../images/face/face5.png");
+    background-size: cover;
+  }
+  .cube__face--bottom {
+    background-image: url("../images/face/face6.png");
+    background-size: cover;
+  }
+  .cube__face--front {
+    transform: rotateY(0deg);
+  }
+  .cube__face--right {
+    transform: rotateY(90deg);
+  }
+  .cube__face--back {
+    transform: rotateY(180deg);
+  }
+  .cube__face--left {
+    transform: rotateY(-90deg);
+  }
+  .cube__face--top {
+    transform: rotateX(90deg);
+  }
+  .cube__face--bottom {
+    transform: rotateX(-90deg);
+  }
+  .cube__face--front {
+    transform: rotateY(0deg) translateZ(17px);
+  }
+  .cube__face--right {
+    transform: rotateY(90deg) translateZ(17px);
+  }
+  .cube__face--back {
+    transform: rotateY(180deg) translateZ(17px);
+  }
+  .cube__face--left {
+    transform: rotateY(-90deg) translateZ(17px);
+  }
+  .cube__face--top {
+    transform: rotateX(90deg) translateZ(17px);
+  }
+  .cube__face--bottom {
+    transform: rotateX(-90deg) translateZ(17px);
+  }
+  .cube {
+    transform: translateZ(-34px);
   }
 }
