--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -33,12 +33,18 @@ header,
 .main-container {
   display: flex;
   justify-content: space-around;
+  border-radius: 10px;
+  border: 2px solid brown;
+  box-shadow: 0 0 0 4px black;
+  margin: auto;
+  background-color: var(--boardgame-color);
 }
 #head-game {
   justify-content: space-around;
-  width: 50%;
+  max-width: 75%;
   height: 3rem;
   background-color: whitesmoke;
+  margin-top: 1.2rem;
 }
 .player-board {
   display: flex;
@@ -67,10 +73,10 @@ header,
   align-items: center;
 }
 .playing > h2 {
-  background-color: #ff0c0061;
+  background-color: whitesmoke;
 }
 .playing > img {
-  background-color: #ff0c0061;
+  background-color: whitesmoke;
 }
 .dice-box {
   display: flex;
@@ -89,12 +95,12 @@ header,
 #gameboard {
   flex-direction: column;
   text-align: center;
-  background-color: var(--boardgame-color);
-  border-radius: 50%;
+  /* background-color: var(--boardgame-color); */
+  /* border-radius: 50%; */
   width: 20rem;
   height: 20rem;
-  border: 4px solid brown;
-  box-shadow: 0 0 0 12px black;
+  border: none;
+  box-shadow: none;
   margin: auto 1em auto 1em;
 }
 #pot {
@@ -108,9 +114,16 @@ header,
   display: flex;
   flex-wrap: wrap;
 }
+#pot.tokens-box {
+  width: 150px;
+  height: 65px;
+}
+#box-token1.tokens-box,
+#box-token2.tokens-box {
+  width: 65px;
+  height: 150px;
+}
 .tokens-box {
-  width: 17vh;
-  height: 17vh;
   border-radius: 10px;
   border: 2px solid brown;
   box-shadow: 0 0 0 4px black;
@@ -132,7 +145,7 @@ header,
   top: 0;
   display: flex;
   flex-direction: column;
-  font-size: 0.5em;
+  font-size: 1rem;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
@@ -142,7 +155,7 @@ header,
 
 /* Modal Content/Box */
 .modal-content {
-  background: rgb(201, 190, 171);
+  background: rgb(230, 227, 221);
   margin: 3em auto; /* 15% from the top and centered */
   padding: 2em;
   border: 1px solid #888;
@@ -165,22 +178,33 @@ header,
 }
 #rules {
   display: none;
+  font-size: 1.3rem;
 }
 table {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  border-collapse: collapse;
+  font-size: 1.5rem;
 }
+/* 
+td {
+  margin: 0;
+  padding: 0;
+} */
 .cell-combi {
   height: 2em;
   width: 50em;
+  border: 4px solid brown;
 }
 .cell-rest {
   height: 4em;
   width: 50em;
+  border: 4px solid brown;
 }
 .cell-value {
+  border: 4px solid brown;
   height: 2em;
   width: 10em;
   padding-left: 1em;
@@ -200,7 +224,7 @@ table {
   button {
     height: 1rem;
     font-size: 0.5em;
-    margin: 0 1em 0.5em 1em;
+    margin: 0.2em 1em 0.2em 1em;
   }
   .mobile {
     display: block;
@@ -222,6 +246,10 @@ table {
   }
   h2 {
     font-size: 0.9rem;
+  }
+  #head-game {
+    height: 2rem;
+    margin-top: 0;
   }
   .main-container {
     justify-content: space-around;
@@ -249,6 +277,16 @@ table {
     width: 2.4rem;
     border: 1px solid brown;
     box-shadow: 0 0 0 2px black;
+  }
+  #pot.tokens-box {
+    margin-top: -5px;
+    width: 80px;
+    height: 75px;
+  }
+  #box-token1.tokens-box,
+  #box-token2.tokens-box {
+    width: 75px;
+    height: 80px;
   }
   #gameboard {
     width: 7rem;
