add anim keep dice

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -132,7 +132,7 @@ header,
 #dialog-box {
   width: 70%;
   height: 4rem;
-  background-color: brown;
+  background-color: whitesmoke;
   margin: auto;
 }
 /****** rules Modal ***/
