--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -63,6 +63,92 @@
     min-width: 50%;
   }
   /***********Anim dice********/
+  /**KEEP**/
+  .dice-d1-right {
+    animation: keepdiced1right 0.5s;
+  }
+  .dice-d2-right {
+    animation: keepdiced2right 0.5s;
+  }
+  .dice-d3-right {
+    animation: keepdiced3right 0.5s;
+  }
+  @keyframes keepdiced3right {
+    0% {
+      transform: translateZ(0px) translateX(0px) translateY(0px);
+    }
+    50% {
+      transform: translateZ(50px) translateX(50px) translateY(-50px);
+    }
+    100% {
+      transform: translateZ(0px) translateX(155px) translateY(50px);
+    }
+  }
+  @keyframes keepdiced2right {
+    0% {
+      transform: translateZ(0px) translateX(0px) translateY(0px);
+    }
+    50% {
+      transform: translateZ(50px) translateX(50px) translateY(-50px);
+    }
+    100% {
+      transform: translateZ(0px) translateX(175px) translateY(0px);
+    }
+  }
+  @keyframes keepdiced1right {
+    0% {
+      transform: translateZ(0px) translateX(0px) translateY(0px);
+    }
+    50% {
+      transform: translateZ(50px) translateX(50px) translateY(-50px);
+    }
+    100% {
+      transform: translateZ(0px) translateX(250px) translateY(-50px);
+    }
+  }
+  .dice-d1-left {
+    animation: keepdiced1left 0.5s;
+  }
+  .dice-d2-left {
+    animation: keepdiced2left 0.5s;
+  }
+  .dice-d3-left {
+    animation: keepdiced3left 0.5s;
+  }
+  @keyframes keepdiced3left {
+    0% {
+      transform: translateZ(0px) translateX(0px) translateY(0px);
+    }
+    50% {
+      transform: translateZ(50px) translateX(-50px) translateY(-50px);
+    }
+    100% {
+      transform: translateZ(0px) translateX(-250px) translateY(50px);
+    }
+  }
+  @keyframes keepdiced2left {
+    0% {
+      transform: translateZ(0px) translateX(0px) translateY(0px);
+    }
+    50% {
+      transform: translateZ(50px) translateX(-50px) translateY(0px);
+    }
+    100% {
+      transform: translateZ(0px) translateX(-175px) translateY(0px);
+    }
+  }
+  @keyframes keepdiced1left {
+    0% {
+      transform: translateZ(0px) translateX(0px) translateY(0px);
+    }
+    50% {
+      transform: translateZ(50px) translateX(-50px) translateY(-50px);
+    }
+    100% {
+      transform: translateZ(0px) translateX(-155px) translateY(-50px);
+    }
+  }
+  /**ROLL**/
   .scene-d1,
   .scene-d2,
   .scene-d3 {
@@ -82,16 +168,14 @@
   .cube.is-spinning {
     animation: spinCube 3s infinite;
   }
-
   @keyframes spinCube {
     0% {
       transform: translateZ(-16px) rotateX(360deg) rotateY(360deg);
     }
     100% {
-      transform: translateZ(-16px) rotateX(-360deg) rotateY(-360deg);
+      transform: translateZ(16px) rotateX(-360deg) rotateY(-360deg);
     }
   }
-
   .cube__face {
     position: absolute;
     width: 34px;
