fix bug heigth and width token

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -123,6 +123,10 @@ header,
   width: 65px;
   height: 150px;
 }
+.token {
+  max-width: 20px;
+  max-height: 20px;
+}
 .tokens-box {
   border-radius: 10px;
   border: 2px solid brown;
@@ -301,10 +305,6 @@ td {
   .tokens-box {
     width: 5rem;
     height: 4rem;
-  }
-  .token {
-    max-width: 0.75rem;
-    max-height: 0.75rem;
   }
   #text-box {
     width: 5rem;
