--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -60,8 +60,26 @@
     text-align: center;
   }
   footer {
+    display: flex;
     min-width: 50%;
+    text-align: right;
+    padding-right: 1rem;
+    width: 70%;
+    height: 3rem;
+    background-color: whitesmoke;
+    margin: auto;
   }
+  #score {
+    width: 10%;
+    background-color: khaki;
+    outline: 2px solid;
+    font-size: 0.5rem;
+    margin: auto auto auto 0.5rem;
+  }
+  #dialog-box {
+    flex: 1;
+  }
+
   /***********Anim dice********/
   /**KEEP**/
   .dice-d1-right {
