--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -153,7 +153,27 @@ header,
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
-
+footer {
+  display: flex;
+  text-align: center;
+  min-width: 50%;
+  text-align: right;
+  padding-right: 1rem;
+  width: 70%;
+  height: 3rem;
+  background-color: whitesmoke;
+  margin: auto;
+}
+#score {
+  width: 10%;
+  background-color: khaki;
+  outline: 2px solid;
+  font-size: 0.8rem;
+  margin: auto auto auto 0.5rem;
+}
+#dialog-box {
+  flex: 1;
+}
 /* Modal Content/Box */
 .modal-content {
   background: rgb(230, 227, 221);
