--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -52,7 +52,6 @@ header,
   justify-content: space-around;
   width: 15rem;
   height: 23rem;
-  text-align: center;
   align-items: center;
 }
 .player-board > img {
@@ -70,6 +69,7 @@ header,
   box-shadow: 0 0 0 4px black;
   border-radius: 10px;
   margin: auto;
+  padding-top: 0.2rem;
   align-items: center;
 }
 .playing > h2 {
